hphp/hack/test/typecheck/expression_trees/nested_expression_tree_lambda.php.exp
File "nested_expression_tree_lambda.php", line 6, characters 28-40:
Expression trees may not be used directly inside of other expression trees. (Parsing[1002])
